NetworkPolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
# 생성하려는 리소스의 종류
kind: NetworkPolicy
metadata:
  # 정책 이름
  name: example-network-policy
  # 정책 적용 Namespaces
  namespace: default
spec:
  podSelector:
    # app=nginx라는 라벨이 적용된 모든 파드에 대한 적용
    matchLabels:
      app: nginx
  # 정책이 적용될 트래픽
  policyTypes:
  - Ingress # Input Traffic
  - Egress # Output Traffic
  ingress:
  # Input Traffic에 대하여 모든 IP 허용
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    # Input Traffic에 대하여 80 포트 허용
    ports:
    - protocol: TCP
      port: 80
  egress:
  # Output Traffic에 대하여 모든 IP 허용
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
